# voice-chat-demo

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  core.py  main.py  mocks.py  pyproject.toml  requirements-dev.txt  requirements.txt  services.py  start.sh  voice-chat-demo.service
.github/workflows/: test.yml
tests/: test_advanced.py  test_app_enhancements.py  test_audio.py  test_cli.py  test_config.py  test_config_enhancements.py  test_conversation.py  test_edge_cases.py  test_edge_cases_enhanced.py  test_edge_tts_retry.py  test_extensions.py  test_input_validation.py  test_integration.py  test_main_errors.py  test_main_extended.py  test_main_functions.py  test_main_services.py  test_new_features.py  test_optimization.py  test_optimization_validation.py  test_optimize_enhancements.py  test_repr.py  test_service_interfaces.py  test_services.py  test_services_full.py  test_text.py
